--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "istanbul": "^0.4.5",
     "memjs": "^1.0.0-rc.1",
     "mocha": "^4.0.1"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.1"
   }
 }
