--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
         - TEST_FILE="test/test_dummy.coffee"
     - env:
         - CACHE_URL="memcached://localhost:11211"
-        - CACHE_LIB="memcached-promisify@^2.0.0"
+        - CACHE_LIB="memcached@^2.2.2"
         - TEST_FILE="test/test_memcached.coffee"
       services:
         - memcached
@@ -32,7 +32,7 @@ matrix:
 
 before_script:
   - rm package-lock.json
-  - npm uninstall memcached-promisify memjs redis --nosave
+  - npm uninstall memcached memjs redis --nosave
   - rm package-lock.json
   - if [ $CACHE_LIB != "" ]; then npm i $CACHE_LIB; fi
 
