--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "mocha": "^4.0.1"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "memjs": "^1.0.0-rc.1"
+    "bluebird": "^3.5.1"
   },
   "optionalDependencies": {
+    "memcached": "^2.2.2",
+    "memjs": "^1.0.0-rc.1",
     "redis": "^2.8.0"
   }
 }
